# GUI-Titans

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.32a15fd  CMakeLists.txt.user.6783759  CMakeLists.txt.user.cc724f5  README.md  configmanager.cpp  configmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mockdata.json  resources.qrc  robotdata.h  robotselectiondialog.cpp  robotselectiondialog.h  robotwidget.cpp  robotwidget.h
proto/: wrapper.proto
scripts/: update_config.py
